feat: better spacing

--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@
     max-width: 1200px;
     margin: 0 auto;
     /* some breathing space */
-    padding-top: 15px;
+    /* padding-top: 15px; */
     padding-bottom: 15px;
+    margin-top: -50px;
 }
 
 .page {
-    border: 2px solid black;
-    font-family: Candarad;
+    /* border: 2px solid black; */
+    margin: -20px;
 }
 
 #footer {
