feat: better spacing between pages

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 .page {
     /* border: 2px solid black; */
-    margin-bottom: -20px;
-    margin-top: -20px;
+    margin-bottom: -3%;
+    margin-top: -3%;
 }
 
 #footer {
