feat: new font with new font

--- a/fonts_loader/fonts.css
+++ b/fonts_loader/fonts.css
@@ -21,3 +21,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+/* downloaded from https://en.bestfonts.pro/font/century-gothic */
+@font-face {
+    font-family: 'Century Gothic';
+    src: url('/vendor/fonts/CenturyGothic.woff')format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
